# TrustTour

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baselines.yaml  default.yaml  trusttour.yaml
data/: datasets.py  prepare_data.py  transforms.py
game/: stackelberg.py
models/: decision_module.py  ds_svit.py  srm.py  trust_module.py
models/baselines/: aide.py  f3net.py  iapl.py  registry.py  swin.py  xception.py
rl/: hitl_rl.py
scripts/: evaluate.py  infer.py  run_game.py  run_hitl_rl.py  train.py  train_baselines.py
tests/: test_dataloader.py  test_models.py  test_trust_decision.py
utils/: logger.py  losses.py  metrics.py  plotting.py  seed.py
