[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trusttour"
version = "1.0.0"
description = "TrustTour: An AI-enabled Smart Tourism Trust and Decision Support Framework for Authenticity Verification of Tourism Visual Content"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "TrustTour Authors" },
]
keywords = [
    "smart tourism",
    "ai-generated image detection",
    "vision transformer",
    "trust-aware decision support",
    "reinforcement learning",
    "game theory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.8.0",
    "einops>=0.7.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=24.0.0", "flake8>=7.0.0"]
clip = ["open_clip_torch>=2.24.0"]

[project.urls]
Repository = "https://github.com/<your-org>/trusttour"

[tool.setuptools.packages.find]
include = ["models*", "data*", "rl*", "game*", "utils*", "scripts*"]
